<resources>
    <string name="app_name">WolfKillerForJudge</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="init_player_count">總共遊玩人數</string>
    <string name="init_good_side">正義聯盟</string>
    <string name="role_village">村民</string>
    <string name="role_witch">女巫</string>
    <string name="role_prophet">預言家</string>
    <string name="role_hunter">獵人</string>
    <string name="role_knight">騎士</string>
    <string name="role_werewolf">狼人</string>
    <string name="role_wolf_king">狼王</string>
    <string name="role_idoit">白癡</string>
    <string name="common_day_break">天亮請睜眼</string>
</resources>
